--- a/slim.conf
+++ b/slim.conf
@@ -40,7 +40,7 @@ login_cmd           exec /bin/bash -login ~/.xinitrc %session
 # sessreg. You can use the %user variable
 #
 # sessionstart_cmd	some command
-sessionstart_cmd	exec /bin/bash -c "chmod 777 /sys/class/backlight/apple_backlight/brightness"
+# sessionstart_cmd	exec /bin/bash -c "chmod 777 /sys/class/backlight/apple_backlight/brightness"
 # sessionstop_cmd	some command
 
 # Start in daemon mode. Valid values: yes | no
