--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_vim="tmux display-message -p '#{pane_current_command}' | grep -iq vim"
+# bind-key -n C-i if-shell "$is_vim" "display-message yes" "display-message no"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-w C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
@@ -10,6 +10,9 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # reload config file
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
+
+# to preserve $PS1 by sourcing .bashrc
+set-option -g default-command bash
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
@@ -80,17 +83,3 @@ set-window-option -g clock-mode-colour green #green
 
 # enable mouse
 set -g mouse on
-
-###########
-## old config, not use, keep for reference
-###########
-
-# check is_vim status
-# bind-key b if-shell "$is_vim" "display-message yes" "display-message no"
-
-# # Smart pane switching with awareness of Vim splits.
-# bind-key -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-# bind-key -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-# bind-key -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-# bind-key -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-# bind-key -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
