--- a/_tmux.conf
+++ b/_tmux.conf
@@ -8,7 +8,7 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# reload config file
+# reload config file with C-b + r
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
 # to preserve $PS1 by sourcing .bashrc
@@ -23,11 +23,9 @@ set -g history-limit 50000
 # tmux messages are displayed for 4 seconds
 set -g display-time 4000
 
-# refresh 'status-left' and 'status-right' more often
-set -g status-interval 5
-
 # upgrade $TERM to screen-256color for <Home>, <End> keys support
 set -g default-terminal "screen-256color"
+
 # Enable RGB colour if running in xterm(1), also works for screen-256color
 set-option -sa terminal-overrides ",xterm*:Tc"
 
@@ -48,6 +46,17 @@ bind-key b last-window
 
 # ctrl-l still work for readline clear screen
 bind-key C-l send-keys 'C-l'
+
+# enable mouse
+set -g mouse on
+
+# refresh 'status-left' and 'status-right' more often
+set -g status-interval 5
+
+# right statusbar
+# set -g status-right '#[fg=green,bold][ #[fg=white]#(whoami) #[fg=green,bold]]#[default]' 
+# set -g status-right '#[fg=colour1].#[fg=colour2].#[fg=colour3].#[fg=colour4].'
+set -g status-right '#[fg=red]*#[fg=green]*#[fg=blue]*#[default]'
 
 #### COLOUR (Solarized dark)
 
@@ -81,5 +90,3 @@ set-option -g display-panes-colour brightred #orange
 # clock
 set-window-option -g clock-mode-colour green #green
 
-# enable mouse
-set -g mouse on
