--- a/_tmux.conf
+++ b/_tmux.conf
@@ -54,34 +54,27 @@ set -g mouse on
 set -g status-interval 5
 
 # right statusbar
-# set -g status-right '#[fg=green,bold][ #[fg=white]#(whoami) #[fg=green,bold]]#[default]' 
+# set -g status-right '#[fg=green,bold][ #[fg=white]#(whoami) #[fg=green,bold]]#[default]'
 # set -g status-right '#[fg=colour1].#[fg=colour2].#[fg=colour3].#[fg=colour4].'
 set -g status-right '#[fg=red]*#[fg=green]*#[fg=blue]*#[default]'
 
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+set -g status-style fg=yellow,bg=black
 
 # default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=brightblue,bg=default,dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=brightred,bg=default,bright
 
 # pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
+set-option -g pane-border-style fg=black
+set-option -g pane-active-border-style fg=brightgreen
 
 # message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set-option -g message-style fg=brightred,bg=black #base02
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
