--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,12 +1,12 @@
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="tmux display-message -p '#{pane_current_command}' | grep -iq vim"
-# bind-key -n C-i if-shell "$is_vim" "display-message yes" "display-message no"
+is_vim="tmux display-message -p '#{pane_title}' | grep -iq vim"
+# bind-key -n C-p if-shell "$is_vim" "display-message yes" "display-message no"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-w C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # reload config file with C-b + r
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
@@ -44,9 +44,6 @@ setw -g aggressive-resize on
 bind-key C-b send-prefix
 bind-key b last-window
 
-# ctrl-l still work for readline clear screen
-bind-key C-l send-keys 'C-l'
-
 # enable mouse
 set -g mouse on
 
@@ -82,4 +79,3 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
-
